--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.76.0",
+    "@react-three/fiber": "^8.13.3",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "10.4.14",
     "eslint": "8.39.0",
@@ -19,6 +21,12 @@
     "react-dom": "18.2.0",
     "react-feather": "^2.0.10",
     "react-markdown": "^8.0.7",
-    "tailwindcss": "3.3.2"
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "3.3.2",
+    "three": "^0.153.0"
+  },
+  "devDependencies": {
+    "next-transpile-modules": "^10.0.0"
   }
 }
