--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@react-three/fiber": "^8.13.3",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "10.4.14",
+    "cloudinary": "^1.37.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.4.0",
     "file-saver": "^2.0.5",
+    "mongoose": "^7.3.2",
     "next": "13.4.0",
+    "openai": "^3.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
